--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@
 
 .masrt {
     display: inline-block;
+    margin: 1000px;
     width: 600px;
     border: 2px black solid;
     padding: 50px 20px;
