--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     color: aqua;
     font-weight: 200;
     font-style: italic;
+    padding: 80;
 }
 
 .redText {
@@ -26,7 +27,7 @@
 
 .masrt {
     display: inline-block;
-    margin: 500px;
+    margin: 128px;
     width: 600px;
     border: 2px black solid;
     padding: 50px 20px;
